  WARNING: REINDEX your ND index on tables that have records with different M/Z
           dimensions for &&& operator to work predictably.
           (Darafei Praliaskouski, Arthur Lesuisse, Andrew Gierth, Raúl Marín)
  - #4290, More robust distance calculations in geography (Paul Ramsey)

  - #4267, Enable Proj 6 deprecated APIs (Darafei Praliaskouski, Raúl Marín)


PostGIS 2.3.8
2018/11/24

  * Bug Fixes and Enhancements

  - #4071, ST_ClusterKMeans crash on NULL/EMPTY fixed (Darafei Praliaskouski)
  - #4074, Disable interrupt tests by default (Regina Obe)
  - #3997, fix bug in lwgeom_median and avoid division by zero (Raúl Marín)
  - #4093, Inconsistent results from qsort callback (yugr)
  - #4160, Use qualified names in topology extension install (Raúl Marín)
  - #4189, Fix undefined behaviour in SADFWrite (Raúl Marín)
  - #4191, Fix undefined behaviour in ptarray_clone_deep (Raúl Marín)
  - #4020, Fix leftovers in topology upgrade from 2.1 (Sandro Santilli)
  - #4203, Fix build with GNU Make 4.1 (Sandro Santilli)
  - #4206, Fix support for PostgreSQL 12 dev branch (Laurenz Albe)
  - #3457, Fix raster envelope shortcut in ST_Clip (Sai-bot)
  - #4223, Fix parallel/near rectangle case in geography (Paul Ramsey)
  - #4326, Allocate enough memory in gidx_to_string (Raúl Marín)
  - #4247, Avoid undefined behaviour in next_float functions (Raúl Marín)
  - #4249, Fix undefined behaviour in raster intersection (Raúl Marín)
  - #4246, Fix undefined behaviour in ST_3DDistance (Raúl Marín)
  - #4244, Avoid unaligned memory access in BOX2D_out (Raúl Marín)

PostGIS 2.3.7
2018/04/06

  * Bug Fixes and Enhancements

  - #3055, [raster] ST_Clip() on a raster without band crashes the server
          (Regina Obe)
  - #3978, Fix KNN when upgrading from 2.1 or older (Sandro Santilli)
  - #4003, lwpoly_construct_circle: Avoid division by zero (Raúl Marín Rodríguez)
  - #4017, lwgeom lexer memory corruption (Peter E)